--- a/index.css
+++ b/index.css
@@ -10,12 +10,15 @@
 
   --gray-100: #F5F5F6;
   --gray-200: #E1E2E1;
+  --gray-250: #d4d4d4;
   --gray-300: #a0a3a0;
   --gray-400: #8c8f8c;
   --gray-500: #656665;
 
   --black: #000000;
   --white: #FFFFFF;
+
+
 
   /* Fonts */
   --primary-font-family: sans-serif;
